--- a/src/screens/css/BrowseImage.css
+++ b/src/screens/css/BrowseImage.css
@@ -1,9 +1,11 @@
 .browse-image-container {
-  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   border-radius: 20px;
+  padding: 10px;
+  flex: 1;
 }
 
 .search-source-logo {
@@ -22,7 +24,7 @@
 .switch-container {
   display: flex;
   align-items: center;
-  margin-bottom: 20px;
+  padding: 0px 30px 20px 30px;
   justify-content: space-between;
 }
 
@@ -34,7 +36,4 @@
 }
   
 @media (max-width: 768px){
-    .browse-image-container {
-        width: 80vw;
-    }
 }
