--- a/src/screens/css/Home.css
+++ b/src/screens/css/Home.css
@@ -7,8 +7,6 @@
 }
 
 .home-data-container {
-  width: 100%;
-  height: 100%;
   padding-top: 10px;
 }
 
